@@ -26,3 +26,21 @@ operating environment too :-)
 If you want to insert extra debug code at source code level, use
 	./configure --enable-debug
 
+On my Ubuntu systems, to build Oracle XE cdemo81 sample, I use something like 
+this:
+	export CPPFLAGS=-I/usr/include/libxml2
+	./configure --with-oracle=/usr/lib/oracle/xe/app/oracle/product/10.2.0/server
+	make
+
+but to execute the sample too, the path is longer:
+	export CPPFLAGS=-I/usr/include/libxml2
+	./configure --with-oracle=/usr/lib/oracle/xe/app/oracle/product/10.2.0/server --prefix=/tmp/lixa
+	make
+	make install
+	sudo su - oracle
+	cd /tmp/lixa/bin
+	./cdemo81
+because the application must be executed by "oracle" user or you have to deal
+with Oracle's own permission (this is not a source for Oracle info
+unfortunately, so only very basic set-up is explained)
+
